--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Izaak{% block title %}{% end %}</title>
+<title>Gallery{% block title %}{% end %}</title>
 
-<link rel="shortcut icon" type="image/x-icon" href="/static/favicon.ico" />
+<link rel="shortcut icon" type="/image/x-icon" href="/static/favicon.ico" />
 
-<script src="static/jquery-2.2.0.min.js" type="text/javascript"></script>
+<script src="/static/jquery-2.2.0.min.js" type="text/javascript"></script>
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
@@ -17,7 +17,8 @@
 <div class="container-disabled">
 <nav class="navbar navbar-inverse">
     <ul class="nav navbar-nav navbar-left">
-        <li><a class="navbar-brand" href="/">Izaak</a></li>
+        <li><a class="navbar-brand" href="/">Home</a></li>
+        <li><a class="navbar-brand" href="/editor/">Editor</a></li>
     </ul>
 </nav>
 
