--- a/templates/index.html
+++ b/templates/index.html
@@ -3,21 +3,32 @@
 
 {% block head %}
 <script src="/static/fabric.js?t={{t}}"></script>
-
+<link rel="stylesheet" type="text/css" href="/static/jquery.gridster.min.css">
 <style>
-.i {
-    float: left;
-    border: 1px solid black;
-    margin: 3px;
-    display: inline-block;
+
+.gridster * {
+    margin: 0;
+    padding: 0;
 }
-.i3x4 {
-    width: 300px;
-    height: 400px;
+ul {
+    list-style-type: none;
 }
-.i4x3 {
-    width: 400px;
-    height: 300px;
+
+.gridster li {
+    font-size: 1em;
+    font-weight: bold;
+    text-align: center;
+    line-height: 100%;
+    background-repeat: no-repeat;
+}
+.gridster li header {
+    background: #999999;
+    display: block;
+    font-size: 6px;
+    line-height: normal;
+    padding: 4px 0 6px;
+//    margin-bottom: 20px;
+    cursor: move;
 }
 
 </style>
@@ -25,25 +36,49 @@
 
 {% block body %}
 
-<div id="ct"></div>
-
+<div class="gridster"><ul></ul></div>
+<script src="/static/jquery.gridster.min.js" type="text/javascript" charset="utf-8"></script>
 
 <script type="text/javascript">
+  var gridster;
+
+  $(function(){
+
+    window.gridster = $(".gridster > ul").gridster({
+        widget_margins: [5, 5],
+        widget_base_dimensions: [92, 92],
+        min_cols: 6,
+        resize: {
+            enabled: true,
+            stop: function(e, ui, $widget) {
+                console.log('STOP', ui);
+                window.gridster.serialize();
+            }
+        },
+        draggable: {
+            handle: 'header',
+            stop: function(e, ui, $widget) {
+                console.log('STOP', ui);
+                window.gridster.serialize();
+            }
+        }
+    }).data('gridster');
+  });
+
+    var tpl = function(img) {return '<li class="i" style="background-image:url(\'/static/img/'+img+'.jpg\')"><div class="title"><header>|||</header></div></li>'}
+
 var data = {};
 function callback(result_str) {
     var result = JSON.parse(result_str);
     var ct = $('#ct');
     console.log(result);
     result.data.objs.forEach(function(item) {
-        var el = $('<div>');
-        el.addClass('i');
-        el.addClass('i'+item.size);
-        el.css('background-image', 'url("/static/img/'+item._id+'.jpg")');
-        ct.append(el);
+        window.gridster.add_widget.apply(window.gridster, [tpl(item._id), item.width/100, item.height/100])
     });
 }
 
 $.ajax({type: 'GET', url: '/image/', data: data, success: callback});
+
 </script>
 {% end %}
 
